@@ -32,6 +32,7 @@
       <preference id="gamefox-pref-quickpost-link" name="gamefox.elements.quickpost.link" type="bool"/>
       <preference id="gamefox-pref-tag-link" name="gamefox.elements.tag.link" type="bool"/>
       <preference id="gamefox-pref-titlechange" name="gamefox.elements.titlechange" type="bool"/>
+      <preference id="gamefox-pref-titleprefix" name="gamefox.elements.titleprefix" type="bool"/>
       <preference id="gamefox-pref-msgnum" name="gamefox.elements.msgnum" type="bool"/>
       <preference id="gamefox-pref-msgnum-style" name="gamefox.elements.msgnum.style" type="int"/>
       <preference id="gamefox-pref-highlight-msgs" name="gamefox.highlight.msgs" type="bool"/>
@@ -188,13 +189,17 @@
 
         <tabpanel orient="vertical" flex="1">
           <vbox>
-
             <groupbox>
               <caption label="&general.label;"/>
-              <vbox>
-                <checkbox preference="gamefox-pref-titlechange" label="&page.elements.desctitles;"/>
-                <checkbox preference="gamefox-pref-quickpost-button" label="&page.elements.postmessage;"/>
-              </vbox>
+              <hbox>
+                <vbox flex="1">
+                  <checkbox preference="gamefox-pref-titlechange" label="&page.elements.desctitles;"/>
+                  <checkbox preference="gamefox-pref-quickpost-button" label="&page.elements.postmessage;"/>
+                </vbox>
+                <vbox flex="1">
+                  <checkbox preference="gamefox-pref-titleprefix" label="&page.elements.titleprefix;"/>
+                </vbox>
+              </hbox>
             </groupbox>
 
             <grid>
